--- a/siirler.html
+++ b/siirler.html
@@ -249,7 +249,7 @@
             <a href="siir-gonlumde-irmaklar-caglar.html" class="poem-link"><div class="poem-card"><h3 data-lang="p5_title">Irmaklar Çağlar</h3><p data-lang="p5_desc">"Evimin önünde abşar. Dereler akar uzunca. Gönlümde Irmaklar Çağl..."</p><div class="read-more" data-lang="btn_read">TAMAMINI OKU →</div></div></a>
             <a href="siir-dost-pazari.html" class="poem-link"><div class="poem-card"><h3 data-lang="p22_title">Dost Pazarı</h3><p data-lang="p22_desc">"Dili şeker şerbet, kalbi buz imiş, Dost dediğin meğer, sadece söz imiş..."</p><div class="read-more" data-lang="btn_read">TAMAMINI OKU →</div></div></a>
         </div>
-        <div id="no-result" data-lang="no_result">Aradığınız kriterlere uygun şiir bulunamadı.</div>
+        <div id="no-result" data-lang="no_result">Sayfa sonu</div>
     </div>
 
     <footer>
