--- a/online-egitim.html
+++ b/online-egitim.html
@@ -692,7 +692,7 @@
                             <i class="fas fa-microphone-lines"></i> <span data-translate="portal_menu_tuner">Akort Cihazı</span>
                         </a>
                         <a onclick="sayfaGoster('jenerator-view')" class="menu-link">
-                            <i class="fas fa-microphone-lines"></i> <span data-translate="portal_menu_tuner">Akustik Lab</span>
+                            <i class="fas fa-microphone-lines"></i> <span data-translate="portal_menu_jenerator">Akustik Lab</span>
                         </a>
 
                         <a onclick="startLiveClass()" class="menu-link">
