--- a/online-egitim.html
+++ b/online-egitim.html
@@ -2416,7 +2416,7 @@ gununBilgisiniGetir();
       }
   }
 
-  // Öğrenci Listesi
+  // Öğrenci Listesi YENİ ÖĞRENCİ KAYDI YENİ KAYIT
   const ogrenciListesi = {
       "Z29rYm95MDlAZ21haWwuY29t": { ad: "R29rMg==", soyad: "UEFJTlRFUg==" },
       "ZWxpZmthcm1hbjUyNkBnbWFpbC5jb20=": { ad: "RWxpZg==", soyad: "S0FSTUFO" },
@@ -2425,7 +2425,8 @@ gununBilgisiniGetir();
       "NDJ0ZXJvYmF5dDYzQGdtYWlsLmNvbQ==": { ad: "ZGVuZW1l", soyad: "aGVzYWLEsW7EsQ==" },
       "Y2FraW5jaUBhZHUuZWR1LnRy": { ad: "w4dhZ2RhxZ8=", soyad: "QUtJTkNJ" },
       "a2VuYW5udTE5ODFAZ21haWwuY29t": { ad: "S2VuYW4=", soyad: "w5ZjYWw=" },
-      "ZXZpbmVyZGVuQGFkdS5lZHUudHI=": { ad: "RXZpbiBFUkRFTg==", soyad: "VE9QT0dMVQ==" }
+      "ZXZpbmVyZGVuQGFkdS5lZHUudHI=": { ad: "RXZpbiBFUkRFTg==", soyad: "VE9QT0dMVQ==" },
+      "aGF0aWNlb25rMzlAZ290bWFpbC5jb20=": { ad: "SGF0aWNl", soyad: "T05DVUs=" }
   };
 
   // Şifre Sıfırlama
