--- a/online-egitim.html
+++ b/online-egitim.html
@@ -1118,7 +1118,7 @@
                         </div>
                         <div class="exam-detail-container">
                             <p style="color:#888; margin-bottom:15px;">🎧 <span data-translate="listen_dict">Dikte Kaydını Dinle:</span></p>
-                            <iframe id="exam-audio-player" src="" width="100%" height="150" style="border:none; border-radius: 10px;" allow="autoplay"></iframe>
+                            <iframe id="exam-audio-player" src="" width="100%" height="150" style="border:none; border-radius: 10px;" allow="autoplay; fullscreen" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                             
                             <div id="cevap-butonu" class="answer-key-btn" onclick="cevapGoster()">
                              <i class="fas fa-eye"></i> <span id="cevap-yazisi" data-translate="view_answer">CEVAP ANAHTARINI GÖRÜNTÜLE</span>
