--- a/online-egitim.html
+++ b/online-egitim.html
@@ -2444,7 +2444,8 @@ gununBilgisiniGetir();
       "Y2FraW5jaUBhZHUuZWR1LnRy": { ad: "w4dhZ2RhxZ8=", soyad: "QUtJTkNJ" },
       "a2VuYW5udTE5ODFAZ21haWwuY29t": { ad: "S2VuYW4=", soyad: "w5ZjYWw=" },
       "ZXZpbmVyZGVuQGFkdS5lZHUudHI=": { ad: "RXZpbiBFUkRFTg==", soyad: "VE9QT0dMVQ==" },
-      "aGF0aWNlb25rMzlAZ290bWFpbC5jb20=": { ad: "SGF0aWNl", soyad: "T05DVUs=" }
+      "aGF0aWNlb25rMzlAZ290bWFpbC5jb20=": { ad: "SGF0aWNl", soyad: "T05DVUs=" },
+      "YXl0ZWtua2FuZGVtckBnbWFpbC5jb20=": { ad: "QXl0ZWtpbg==", soyad: "S0FOREVNxLBSRQ==" }
   };
 
   // Şifre Sıfırlama
