--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+    <meta property="og:title" content="Online Öğrenci Portalı | Baglamagram">
+<meta property="og:description" content="Mahmut Burak ASLANTAŞ ile profesyonel ve yapay zeka destekli online bağlama eğitimi.">
+<meta property="og:image" content="https://i.hizliresim.com/b8q0syq.png"> 
+<meta property="og:url" content="https://baglamagram.com.tr/online-egitim.html">
+<meta property="og:type" content="website">
+    
     <link rel="shortcut icon" href="ikonn.ico" type="image/x-icon">
     <meta name="google-site-verification" content="_M5BfxWGwxt47kzLdqDckVCSwkliVvvoYFVn8SdsrwM" />
     <meta charset="UTF-8">
