--- a/konserler.html
+++ b/konserler.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta property="og:title" content="Online Öğrenci Portalı | Baglamagram">
+    <meta property="og:title" content="Konserler | Baglamagram">
 <meta property="og:description" content="Mahmut Burak ASLANTAŞ ile profesyonel ve yapay zeka destekli online bağlama eğitimi.">
 <meta property="og:image" content="https://i.hizliresim.com/b8q0syq.png"> 
 <meta property="og:url" content="https://baglamagram.com.tr/online-egitim.html">
