--- a/hakkinda.html
+++ b/hakkinda.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+    <meta property="og:title" content="Hakkında | Baglamagram">
+<meta property="og:description" content="Mahmut Burak ASLANTAŞ ile profesyonel ve yapay zeka destekli online bağlama eğitimi.">
+<meta property="og:image" content="https://i.hizliresim.com/b8q0syq.png"> 
+<meta property="og:url" content="https://baglamagram.com.tr/online-egitim.html">
+<meta property="og:type" content="website">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hakkında | Mahmut Burak ASLANTAŞ</title>
