--- a/hakkinda.html
+++ b/hakkinda.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Person",
+  "name": "Mahmut Burak Aslantaş",
+  "alternateName": "Mahmut Burak",
+  "url": "https://baglamagram.com.tr",
+  "jobTitle": "Müzisyen",
+  "knowsAbout": [
+    "Bağlama",
+    "Türkü",
+    "Türk Halk Müziği",
+    "Saz",
+    "Müzik Eğitimi"
+  ],
+  "birthDate": "2002-02-08",
+  "sameAs": [
+    "https://www.instagram.com/baglamagram"
+  ]
+}
+</script>
+
+    
     <meta property="og:title" content="Hakkında | Baglamagram">
 <meta property="og:description" content="Mahmut Burak ASLANTAŞ ile profesyonel ve yapay zeka destekli online bağlama eğitimi.">
 <meta property="og:image" content="https://i.hizliresim.com/b8q0syq.png"> 
