--- a/hakkinda.html
+++ b/hakkinda.html
@@ -335,7 +335,7 @@
                 <h3 data-lang="career_title">Kariyer Özeti</h3>
                 <ul>
                     <li data-lang="career_li1"><strong>TRT Gençlik Korosu (2025):</strong> Bağlama icracısı olarak koro bünyesinde aktif görev.</li>
-                    <li data-lang="career_li2"><strong>Katıldığı Programlar:</strong> TRT Türkü'de yayınlanan "Genç Nesilden Türküler" programlarında konuk sanatçı ve orkestra üyesi olarak yer aldı.</li>
+                    <li data-lang="career_li2"><strong>Katıldığı Programlar:</strong> TRT Türkü: "Genç Nesilden Türküler" 17 Mayıs 2025 (orkestra) ve 14 Kasım 2025 (konuk)</li>
                 </ul>
             </div>
 
@@ -412,7 +412,7 @@
                 bio_p2: "2024 yılında TRT Türk Halk Müziği Gençlik Korosuna bağlama icracısı olarak katılmıştır. 14 Kasım 2025'te TRT Türkü'de yayınlanan "Genç Nesilden Türküler" programına konuk sanatçı olarak katılmıştır. 17 Aralık 2025'te Elzė MARKEVIČIŪTĖ'nin katılımı ile \"East to West\" projesi kapsamında ilk konserini tamamlamıştır. Aslantaş, müziği sadece bir ses dizisi değil, kültürler arası bir köprü olarak konumlandırmaktadır. Aynı zamanda amatör olarak şiirle uğraşan Aslantaş, şarkı sözü ve yeni beste üretme yolunda çalışmalarını sürdürmektedir.",
                 career_title: "Kariyer Özeti",
                 career_li1: "<strong>TRT Gençlik Korosu (2025):</strong> Bağlama icracısı olarak koro bünyesinde aktif görev.",
-                career_li2: "<strong>Katıldığı Programlar:</strong> TRT Türkü'de yayınlanan \"Genç Nesilden Türküler\" programlarında konuk sanatçı ve orkestra üyesi olarak yer aldı.",
+                career_li2: "<strong>Katıldığı Programlar:</strong> TRT Türkü: "Genç Nesilden Türküler" 17 Mayıs 2025 (orkestra) ve 14 Kasım 2025 (konuk)",
                 projects_title: "Sanat Projeleri",
                 projects_li1: "<strong>East to West:</strong> Piyanist Elzė Markevičiūtė ile Anadolu ezgilerini Batı klasikleriyle buluşturan uluslararası konser serisi.",
                 projects_li2: "<strong>Edebiyat Denemeleri:</strong> Aruz ve hece ölçüsü kullanarak özgün şiirler üretmektedir. Şiirlerinde kullandığı net ve doğrudan üslubuyla dikkat çekmektedir.",
