--- a/bilgi-yarismasi/kulak-egzersiz.html
+++ b/bilgi-yarismasi/kulak-egzersiz.html
@@ -308,8 +308,8 @@
         // Sonuç Yorumları
         const resultComments = {
             tr: [
-                { min: 96, title: "Mutlak Kulak (Absolut)", comment: "Senin Allah'ına Kurban!🥳🎉🎊 Sen frekansları resmen görüyorsun! Absolut Kulak adı verilen, çok az insanın sahip olduğu bir yeteneğin var. Kesinlikle müzik ile ilgilenmelisin, mutlaka bir müzik uzmanına danış." },
-                { min: 80, title: "Üst Düzey Kulak", comment: "Mükemmel.👏🏻 Sahne tozunu yutmaya hazırsın, kulağın gerçekten diğer insanlara nazaran çok çok iyi. Doğuştan gelen Absolut Kulağa çok yakınsın." },
+                { min: 96, title: "Mutlak Kulak (Absolut) Olabilir", comment: "Helal olsun be sana!🥳🎉🎊 Sen frekansları resmen görüyorsun! Tüm soruları doğru bildiğine göre Absolut Kulak adı verilen, çok az insanın sahip olduğu bir yeteneğe sahip olabilirsin. Eğer müzik ile alakadar değil isem kesinlikle müzik ile ilgilenmelisin, mutlaka bir müzik uzmanına danış." },
+                { min: 80, title: "Üst Düzey Kulak", comment: "Mükemmel.👏🏻 Bu sonucu alman, sesler ile aranın ne kadar iyi olduğunu gösteriyor. Kulağın gerçekten diğer insanlara nazaran çok çok iyi. Çalışmaya aynen devam!" },
                 { min: 60, title: "İyi Seviyede Kulak", comment: "Ortalamanın üzerindesin.👍 Biraz daha pratikle notalarla dostluğunu pekiştirebilirsin." },
                 { min: 40, title: "Ortalama Seviye", comment: "Sesleri ayırt ediyorsun ama aralarındaki o ince farklarda kafan karışıyor. Çalışmaya devam!" },
                 { min: 10, title: "Pek İyi Değil", comment: "Ses dünyasına biraz yabancısın. Biraz daha müzik ile haşır neşir olsan iyi olur. Üzülme, kulak eğitimiyle her şey gelişir." },
